package edu.fiuba.algo3.tp2N10.Modelo.Respuesta;

public interface Respuesta {

    Integer evaluar(Respuesta respuestaUsuario);

    boolean permiteMultiplicadores();

    boolean permiteExclusividad();

    Respuesta respuestaIncorrecta();
}
