package edu.fiuba.algo3.tp2N10.Vista;

public interface Observer {

    void change();
}
